<package>
  <name>hrl_realsense_camera</name>
  <version>0.0.0</version>
  <description>hrl_realsense_camera</description>
  <maintainer email="deric.park@gatech.edu">Daehyung Park Advisor: Prof. Charlie Kemp.
      Healthcare Robotics Lab, Georgia Tech</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hrl_realsense_camera</url>

  <author>Daehyung Park</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <!--build_depend>message_generation</build_depend-->
  <!--build_depend>std_msgs</build_depend-->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>

</package>










