<?xml version="1.0"?>
<package>
  <name>hrl_task_planning</name>
  <version>0.0.0</version>
  <description>The hrl_task_planning package produces SMACH state machines from the solutions to PDDL planning problems.</description>

  <maintainer email="Phillip.Grice@gatech.edu">Phillip Grice</maintainer>

  <license>GPL</license>

  <author email="Phillip.Grice@gatech.edu">Phillip Grice</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
